--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -10,11 +10,11 @@
 .ContactsScreen {
     position: relative;
     width: 100%;
-    height: 100%;
+    min-height: -webkit-fill-available;
     padding: 7rem 4rem;
     padding-bottom: 4rem;
     @media screen and (max-width: 600px) {
-        padding: 70px 0 0 0 !important;
+        padding: 0 !important;
     }
 }
 
@@ -65,7 +65,9 @@
             font-size: 1.8rem;
             margin: 1rem auto;
             @media screen and (max-width: 600px) {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
+                margin: auto;
+                // line-height: 1;
             }
         }
         .subscribe{
@@ -78,6 +80,10 @@
                 font-size: 1.8rem;
                 box-shadow: 0 5px 5px -2px #444444a4;
                 transition: all .5s ease;
+                @media screen and (max-width: 600px) {
+                    padding: .5rem;
+                    font-size: 1.3rem;
+                }
                 &:hover{
                     background-color: #d65a02;
                 }
@@ -157,6 +163,10 @@
             transform: translate3d(0, 30px, 0);
             transition: all 1s cubic-bezier(.2, .69, .49, .95);
             will-change: transform, opacity;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+                transform: translate3d(0, 0, 0);
+            }
             &:nth-child(1) {
                 transition-delay: .1s;
             }
@@ -212,23 +222,7 @@
         position: relative;
         overflow: hidden;
         @media screen and (max-width: 600px) {
-            min-height: 200px;
-        }
-        &.visible {
-            .imageDamper {
-                transform: translate3d(100%, 0, 0);
-            }
-        }
-        .imageDamper {
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            background-color: #efefef;
-            will-change: transform;
-            transform: translate3d(0,0,0);
-            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+            min-height: 130px;
         }
         .image{
             display: block;
@@ -237,8 +231,6 @@
             margin-left: auto;
             background: url('../../../assets/images/home/programs-min.jpg') center center/ cover no-repeat ;
             @media screen and (max-width: 600px) {
-                width: 100%;
-                height: 92%;
                 background-position: center center;
             }
         }
@@ -253,13 +245,17 @@
         @media screen and (max-width: 600px) {
             margin: 0 auto;
             padding: 0;
-         }
+        }
         
         & > div {
             opacity: 0;
             transform: translateY(30px);
             transition: all 1s cubic-bezier(.2, .69, .49, .95);
             will-change: transform, opacity;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         &.visible {
             & > div {
@@ -285,6 +281,7 @@
             transition-delay: .3s;
             @media screen and (max-width: 600px) {
                 margin: 0 auto;
+                transform: translateY(-10px) !important;
             }
         }
         @media screen and (max-width: 600px) {
@@ -324,22 +321,6 @@
     .imageContainer {
         position: relative;
         overflow: hidden;
-        &.visible {
-            .imageDamper {
-                transform: translate3d(-100%, 0, 0);
-            }
-        }
-        .imageDamper {
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            background-color: #efefef;
-            will-change: transform;
-            transform: translate3d(0,0,0);
-            transition: all 1s cubic-bezier(.2, .69, .49, .95);
-        }
         .image{
             display: block;
             width: 100%;
@@ -354,7 +335,6 @@
             }
         }
     }
-    
     
     .content {
         padding: 2rem;
@@ -372,6 +352,10 @@
             transform: translateY(30px);
             transition: all 1s cubic-bezier(.2, .69, .49, .95);
             will-change: transform, opacity;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+                transform: translateY(0);
+             }
         }
         &.visible {
             & > div {
@@ -392,6 +376,10 @@
         .link{
             margin-top: 2rem;
             transition-delay: .3s;
+            @media screen and (max-width: 600px) {
+                margin: 0 auto;
+                transform: translateY(-5px) !important;
+            }
         }
         @media screen and (max-width: 600px) {
             left: 0;
@@ -421,6 +409,10 @@
             transform: translate3d(0, 30px,0);
             transition: all .5s cubic-bezier(.2, .69, .49, .95);
             will-change: transform, opacity;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+                transform: translate3d(0,0,0);
+            }
             &:nth-child(1){
                 transition-delay: .1s;
             }
@@ -503,6 +495,10 @@
             transform: translateY(30px);
             transition: all 1s cubic-bezier(.2, .69, .49, .95);
             will-change: transform, opacity;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         &.visible {
             & > div {
@@ -556,6 +552,9 @@
             cursor: pointer;
             filter: brightness(1.1);
             opacity: 0;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+            }
             &:hover{
                 filter: brightness(1.25);
                 box-shadow: 0px 30px 30px rgba(0,0,0,.4);
@@ -611,6 +610,10 @@
             transform: translateY(30px);
             transition: all 1s cubic-bezier(.2, .69, .49, .95);
             will-change: transform, opacity;
+            @media screen and (max-width: 600px) {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         &.visible {
             & > div {
@@ -634,12 +637,15 @@
 
 .ArticlesScreen {
     &__wrapper {
-        height: 100%;
+        // height: 100%;
+        min-height: -webkit-fill-available;
         display: flex;
         align-items: center;
         background: url('../../../assets/images/home/articles-min.jpg') bottom center / cover no-repeat fixed;
         @media screen and (max-width: 600px) {
-            align-items: flex-start
+            // align-items: flex-start;
+            background-attachment: initial;
+            min-height: -webkit-fill-available;
         }
 
         .content {
@@ -648,6 +654,8 @@
             opacity: 0;
             @media screen and (max-width: 600px) {
                 margin-top: 3rem;
+                transform: translateY(0);
+                opacity: 1;
             }
             &.visible {
                 transform: translateY(0);
@@ -663,14 +671,14 @@
     justify-content: flex-start;
     .image{
         width: 70%;
-        height: 80%;
+        height: 500px;
         margin: 0 auto;
         background: url('../../../assets/images/home/about-min.jpg') center center/ 100% auto no-repeat ;
         box-shadow: 0 15px 20px -5px;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 80vw;
-            background-position: center top;
+            background-position: center bottom;
             box-shadow: none;
         }
     }
@@ -690,6 +698,8 @@
         transition: all 1s ease ;
         @media screen and (max-width: 600px) {
             margin: 0 auto;
+            transform: translateY(0);
+            opacity: 1;
         }
         &.visible {
             transform: translateY(0);
@@ -710,6 +720,9 @@
     opacity: 0;
     transition: all 1s ease;
     will-change: opacity;
+    @media screen and (max-width: 600px) {
+        opacity: 1;
+    }
     &.visible {
         opacity: 1;
     }
