--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -2,6 +2,7 @@
     width: 100%;
     .item {
         width: 100%;
-        height: 100vh;
+        // height: 100vh;
+        min-height: -webkit-fill-available;
     }
 }
