--- a/src/components/modals/AllRegisterModals.module.scss
+++ b/src/components/modals/AllRegisterModals.module.scss
@@ -1,15 +1,21 @@
 .root {
-    &::-webkit-scrollbar {
-        display: none;
-    }
+    // &::-webkit-scrollbar {
+    //     display: none;
+    // }
 }
 .header {
     padding: 1rem 5rem;
+    font-size: 1.5rem;
+    @media screen and (max-width: 600px) {
+        padding: 1rem 0;
+    }
     .title {
         font-size: 2rem;
         margin-bottom: 1rem;
+        @media screen and (max-width: 600px) {
+            font-size: 1rem;
+        }
     }
-    font-size: 1.5rem;
 
 }
 .buttonConfirm,
