--- a/src/routes/Home/Home.module.scss
+++ b/src/routes/Home/Home.module.scss
@@ -1,6 +1,7 @@
 .root {
     width: 100vw;
     height: 100vh;
+    // min-height: -webkit-fill-available;
     overflow-x: hidden;
     scroll-behavior: smooth;
     &::-webkit-scrollbar{
@@ -13,4 +14,8 @@
     left: 0;
     right: 0;
     z-index: 100;
+    @media screen and (max-width: 600px) {
+        position: relative;
+        background-color: white;
+    }
 }
