--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -673,13 +673,17 @@
         width: 70%;
         height: 500px;
         margin: 0 auto;
-        background: url('../../../assets/images/home/about-min.jpg') center center/ 100% auto no-repeat ;
+        background: url('../../../assets/images/home/about-min-v2.jpg') center top / cover no-repeat ;
         box-shadow: 0 15px 20px -5px;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 80vw;
             background-position: center bottom;
             box-shadow: none;
+        }
+        @media screen and (min-width: 1600px) {
+           height: 700px;
+           width: 60%;
         }
     }
     
